--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ html {
     position: relative;
     margin-top: 27px;
     padding-top: 50%;
-    background: url(/assets/img/slider/slider1.jpg) top center / cover no-repeat;
+    background: url(../img/slider/slider1.jpg) top center / cover no-repeat;
 }
 
 #slider .text-content {
